# MIT License
#
# Copyright (c) 2024 - WBTek: Greg Slocum
# Division of WhiteBear Family, Inc.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "crypto_screener"
version = "0.1.0"
edition = "2021"
description = "A cryptocurrency screener application."
repository = "https://github.com/wbtek/crypto_screener"
license = "MIT"

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true       # Enable Link Time Optimization

[profile.dev]
debug = true   # Enable debug symbols
opt-level = 0  # No optimizations (default for debug builds)

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.2"
js-sys = "0.3"
reqwest = { version = "0.11", features = ["json"]}
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.17.0"
console_log = "0.2"
log = "0.4"


[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Request",
    "Response",
    "RequestInit",
    "RequestMode",
    "Headers"
]

